--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <li><a href="about.html">About us</a></li>
                         <li><a href="index.html#best-sellers-section">Best Sellers</a></li>
                         <li><a href="index.html#newsletter-section">Newsletter</a></li>
-                        <li class="menu-icon"><img src="images/menu_icon.png" ></li>
+                        <li class="menu-icon"><img src="images/menu_icon.webp" ></li>
                     </ul>
                 </nav>
             </div>
@@ -56,10 +56,12 @@
         
         <section class="hero">
 
-            <img class="desktop" src="images/Hero_Desktop.jpg">
-            <img class="mobile" src="images/Hero_Mobile.jpg">
-            <img class="tablet" src="images/Hero_Tablet.jpg">
-
+            <picture>
+                <source srcset="images/Hero_Desktop.webp" media="(min-width: 960px)">
+                <source srcset="images/Hero_Tablet.webp" media="(min-width: 576px)">
+                <source srcset="images/Hero_Mobile.webp" media="(max-width: 576px)">
+                <img src="images/Hero_Desktop.webp" alt="Hero Image">
+            </picture>
            
             <div class="hero-content">
                 <div class="container">
@@ -84,7 +86,7 @@
 
                     <div class="product new">
                         <div class="product-picture">
-                            <img src="images/vr1.jpg" alt="product: Penom Case">
+                            <img src="images/vr1.webp" alt="product: Penom Case">
                         </div>
                         <div class="product-info">
                             <h5 class="categories">Headsets, Apple</h5>
@@ -98,7 +100,7 @@
 
                     <div class="product new">
                         <div class="product-picture">
-                            <img src="images/vr2.jpg" alt="product: Noise Cancelling Headphone">
+                            <img src="images/vr2.webp" alt="product: Noise Cancelling Headphone">
                         </div>
                         <div class="product-info">
                             <h5 class="categories">Headsets, PS</h5>
@@ -112,7 +114,7 @@
 
                     <div class="product">
                         <div class="product-picture">
-                            <img src="images/vr3.jpg" alt="product: Canon Digital SLR EOS Rebel T6">
+                            <img src="images/vr3.webp" alt="product: Canon Digital SLR EOS Rebel T6">
                         </div>
                         <div class="product-info">
                             <h5 class="categories">Headsets, Oculus</h5>
