--- a/index.html
+++ b/index.html
@@ -57,10 +57,9 @@
         <section class="hero">
 
             <picture>
-                <source srcset="images/Hero_Desktop.webp" media="(min-width: 960px)">
-                <source srcset="images/Hero_Tablet.webp" media="(min-width: 576px)">
-                <source srcset="images/Hero_Mobile.webp" media="(max-width: 576px)">
-                <img src="images/Hero_Desktop.webp" alt="Hero Image">
+                <source srcset="images/Hero_Mobile.webp" media="(max-width: 575px)" width="576" height="576">
+                <source srcset="images/Hero_Tablet.webp" media="(max-width: 959px)" width="960" height="770">
+                <img src="images/Hero_Desktop.webp" alt="Hero Image" width="1920" height="893">
             </picture>
            
             <div class="hero-content">
@@ -85,7 +84,7 @@
                 <div class="container">
 
                     <div class="product new">
-                        <div class="product-picture">
+                        <div class="product-picture" width="155" height="155">
                             <img src="images/vr1.webp" alt="product: Penom Case">
                         </div>
                         <div class="product-info">
@@ -99,7 +98,7 @@
                     </div>
 
                     <div class="product new">
-                        <div class="product-picture">
+                        <div class="product-picture" width="155" height="155">
                             <img src="images/vr2.webp" alt="product: Noise Cancelling Headphone">
                         </div>
                         <div class="product-info">
@@ -113,7 +112,7 @@
                     </div>
 
                     <div class="product">
-                        <div class="product-picture">
+                        <div class="product-picture" width="155" height="155">
                             <img src="images/vr3.webp" alt="product: Canon Digital SLR EOS Rebel T6">
                         </div>
                         <div class="product-info">
