--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                 <div class="container">
 
                     <div class="product new">
-                        <div class="product-picture" width="155" height="155">
-                            <img src="images/vr1.webp" alt="product: Penom Case">
+                        <div class="product-picture">
+                            <img src="images/vr1.webp" alt="product: Penom Case"  width="155" height="155">
                         </div>
                         <div class="product-info">
                             <h5 class="categories">Headsets, Apple</h5>
@@ -98,8 +98,8 @@
                     </div>
 
                     <div class="product new">
-                        <div class="product-picture" width="155" height="155">
-                            <img src="images/vr2.webp" alt="product: Noise Cancelling Headphone">
+                        <div class="product-picture">
+                            <img src="images/vr2.webp" alt="product: Noise Cancelling Headphone"  width="155" height="155">
                         </div>
                         <div class="product-info">
                             <h5 class="categories">Headsets, PS</h5>
@@ -112,8 +112,8 @@
                     </div>
 
                     <div class="product">
-                        <div class="product-picture" width="155" height="155">
-                            <img src="images/vr3.webp" alt="product: Canon Digital SLR EOS Rebel T6">
+                        <div class="product-picture">
+                            <img src="images/vr3.webp" alt="product: Canon Digital SLR EOS Rebel T6"  width="155" height="155">
                         </div>
                         <div class="product-info">
                             <h5 class="categories">Headsets, Oculus</h5>
