--- a/index.html
+++ b/index.html
@@ -16,12 +16,6 @@
             })(window,document,'script','dataLayer','GTM-PKK35GL5');
         </script>
         <!-- End Google Tag Manager -->
-
-        <!-- Cookie Consent by FreePrivacyPolicy.com https://www.FreePrivacyPolicy.com -->
-        <script type="text/javascript" src="//www.freeprivacypolicy.com/public/cookie-consent/4.1.0/cookie-consent.js" charset="UTF-8"></script>
-        <script type="text/javascript" charset="UTF-8">
-            cookieconsent.run({"notice_banner_type":"simple","consent_type":"express","palette":"light","language":"en","page_load_consent_levels":["strictly-necessary"],"notice_banner_reject_button_hide":false,"preferences_center_close_button_hide":false,"page_refresh_confirmation_buttons":false,"website_name":"Performance Course"});
-        </script>
               
     </head>
 
@@ -47,7 +41,7 @@
                         <li><a href="about.html">About us</a></li>
                         <li><a href="index.html#best-sellers-section">Best Sellers</a></li>
                         <li><a href="index.html#newsletter-section">Newsletter</a></li>
-                        <li class="menu-icon"><img src="images/menu_icon.webp" ></li>
+                        <li class="menu-icon"><img src="images/menu_icon.webp" alt="menu icon"></li>
                     </ul>
                 </nav>
             </div>
@@ -58,7 +52,7 @@
             <picture>
                 <source srcset="images/Hero_Mobile.webp" media="(max-width: 575px)" width="576" height="576">
                 <source srcset="images/Hero_Tablet.webp" media="(max-width: 959px)" width="960" height="770">
-                <img src="images/Hero_Desktop.webp" alt="Hero Image" width="1920" height="893">
+                <img src="images/Hero_Desktop.webp" alt="Man wearing VR headset" width="1920" height="893">
             </picture>
            
             <div class="hero-content">
@@ -200,6 +194,14 @@
 
         <script type="text/javascript" src="js/main.js"></script>
         <script type="text/javascript" src="js/products.js"></script>
+
+        <!-- Cookie Consent by FreePrivacyPolicy.com https://www.FreePrivacyPolicy.com -->
+        <script defer type="text/javascript" src="//www.freeprivacypolicy.com/public/cookie-consent/4.1.0/cookie-consent.js" charset="UTF-8"></script>
+        <script defer type="text/javascript" charset="UTF-8">
+            document.addEventListener('DOMContentLoaded', function() {
+                cookieconsent.run({"notice_banner_type":"simple","consent_type":"express","palette":"light","language":"en","page_load_consent_levels":["strictly-necessary"],"notice_banner_reject_button_hide":false,"preferences_center_close_button_hide":false,"page_refresh_confirmation_buttons":false,"website_name":"Performance Course"});
+            });
+        </script>
 
     </body>
 
