--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </section>
 
         <section class="best-sellers" id="best-sellers-section">
-            <h1>Best Sellers</h1>
+            <h2>Best Sellers</h2>
             <hr>
             <div class="product-slider">
                 <div class="container">
@@ -81,11 +81,11 @@
                             <img src="images/vr1.webp" alt="product: Penom Case"  width="155" height="155">
                         </div>
                         <div class="product-info">
-                            <h5 class="categories">Headsets, Apple</h5>
-                            <h4 class="title">Apple Headset</h4>
-                            <h3 class="price">
+                            <p class="categories">Headsets, Apple</p>
+                            <p class="title">Apple Headset</p>
+                            <p class="price">
                                 <span>US$ 450.00</span>
-                            </h3>
+                            </p>
                             <button>Add to bag</button>
                         </div>
                     </div>
@@ -95,11 +95,11 @@
                             <img src="images/vr2.webp" alt="product: Noise Cancelling Headphone"  width="155" height="155">
                         </div>
                         <div class="product-info">
-                            <h5 class="categories">Headsets, PS</h5>
-                            <h4 class="title">Playstation Headset</h4>
-                            <h3 class="price">
+                            <p class="categories">Headsets, PS</p>
+                            <p class="title">Playstation Headset</p>
+                            <p class="price">
                                 <span>US$ 399.99</span>
-                            </h3>
+                            </p>
                             <button>Add to bag</button>
                         </div>
                     </div>
@@ -109,12 +109,12 @@
                             <img src="images/vr3.webp" alt="product: Canon Digital SLR EOS Rebel T6"  width="155" height="155">
                         </div>
                         <div class="product-info">
-                            <h5 class="categories">Headsets, Oculus</h5>
-                            <h4 class="title">Oculus Headset</h4>
-                            <h3 class="price">
+                            <p class="categories">Headsets, Oculus</p>
+                            <p class="title">Oculus Headset</p>
+                            <p class="price">
                                 <span class="discounted-price">US$ 349.99</span>
                                 <span class="original-price">US$ 419.99</span>
-                            </h3>
+                            </p>
                             <button>Add to bag</button>
                         </div>
                     </div>
@@ -124,7 +124,7 @@
         </section>
 
         <section class="best-sellers">
-            <h1>All Products</h1>
+            <h2>All Products</h2>
             <hr>
             <div class="product-slider" id="all-products">
                 <div class="container">
