--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Discover our line of VR Headsets">
         <title>Home - Tech Shop</title>
         <link rel="stylesheet" href="/css/styles.css">
         <!-- <link rel="stylesheet" type="text/css" href="css/slick.css"/> -->
@@ -41,7 +42,7 @@
                         <li><a href="about.html">About us</a></li>
                         <li><a href="index.html#best-sellers-section">Best Sellers</a></li>
                         <li><a href="index.html#newsletter-section">Newsletter</a></li>
-                        <li class="menu-icon"><img src="images/menu_icon.webp" alt="menu icon"></li>
+                        <li class="menu-icon"><img src="images/menu_icon.webp" alt="menu icon" width="50" height="50"></li>
                     </ul>
                 </nav>
             </div>
